// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders error with insufficient props 1`] = `
<div
  className="card grid-item second-half"
>
  <div
    className="repo-rank"
  >
    456
  </div>
  <div
    className="repo-title"
  >
    <a
      href="https://testthatcard.com"
      target="_blank"
    >
      Test Repo
    </a>
  </div>
  <div
    className="repo-stars"
  >
    <i
      aria-hidden="true"
      className="fa fa-star"
    />
    14
    <i
      aria-hidden="true"
      className="fa fa-star"
    />
  </div>
  <div
    className="top-contributor"
  >
    <img
      alt=""
      className="avatar-img"
      height="30"
      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCuBm8iZkWaoTJ5ruwULeLtYXaExdy3SpmhqkaDkADI0XJP26oZA"
      width="30"
    />
    <a
      className="yellow-link"
      href=""
      target="_blank"
    >
      Loading Contributor....
    </a>
  </div>
</div>
`;

exports[`Card renders with props 1`] = `
<div
  className="card grid-item second-half"
>
  <div
    className="repo-rank"
  >
    456
  </div>
  <div
    className="repo-title"
  >
    <a
      href="https://testthatcard.com"
      target="_blank"
    >
      Test Repo
    </a>
  </div>
  <div
    className="repo-stars"
  >
    <i
      aria-hidden="true"
      className="fa fa-star"
    />
    14
    <i
      aria-hidden="true"
      className="fa fa-star"
    />
  </div>
  <div
    className="top-contributor"
  >
    <img
      alt="barry manilow"
      className="avatar-img"
      height="30"
      src="https://google.com"
      width="30"
    />
    <a
      className="yellow-link"
      href="http://thisisnotreal.com"
      target="_blank"
    >
      barry manilow
    </a>
  </div>
</div>
`;

exports[`Card renders without props 1`] = `
<div
  className="card grid-item second-half"
>
  <div
    className="repo-rank"
  />
  <div
    className="repo-title"
  >
    <a
      href="Loading Repo..."
      target="_blank"
    >
      
    </a>
  </div>
  <div
    className="repo-stars"
  >
    <i
      aria-hidden="true"
      className="fa fa-star"
    />
    
    <i
      aria-hidden="true"
      className="fa fa-star"
    />
  </div>
  <div
    className="top-contributor"
  >
    <img
      alt=""
      className="avatar-img"
      height="30"
      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCuBm8iZkWaoTJ5ruwULeLtYXaExdy3SpmhqkaDkADI0XJP26oZA"
      width="30"
    />
    <a
      className="yellow-link"
      href=""
      target="_blank"
    >
      Loading Contributor....
    </a>
  </div>
</div>
`;
